--- a/src/investment-app-frontend/index.html
+++ b/src/investment-app-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>IC Password Manager</title>
+    <title>ICP Investment App</title>
     <base href="/" />
     <link rel="icon" href="/favicon.ico" />
   </head>
